network-policy/base/cilium/policies/argocd-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: egress-argocd
  namespace: argocd
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
      - {}
  egress:
    - toEndpoints:
      - {}
    - toEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: kube-system
          k8s-app: coredns
      toPorts:
      - ports:
        - port: "53"
          protocol: TCP
      - ports:
        - port: "53"
          protocol: UDP
