network-policy/base/cilium/policies/ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-contour
  namespace: ingress-global
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
  ingress:
    - toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
        - ports:
            - port: "8443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-contour
  namespace: ingress-forest
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
  ingress:
    - toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
        - ports:
            - port: "8443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-contour
  namespace: ingress-bastion
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
  ingress:
    - toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
        - ports:
            - port: "8443"
              protocol: TCP
